@@ -6,6 +6,7 @@
   <string id="30003">Please add your password to the settings</string>
   <string id="30004">Authorisation Failed</string>
   <string id="30005">Unable to authorise channel</string>
+  <string id="30006">Authorizing</string>
 
   <string id="30010">Live</string>
 
