@@ -2,6 +2,7 @@
 import sys, snnow, os
 from cookies import Cookies
 from optparse import OptionParser
+from adobe import AdobePass
 
 # parse the options
 parser = OptionParser()
@@ -18,34 +19,26 @@ parser.add_option('-f', '--ffplay', action="store_true", dest='ffplay',
 
 (options, args) = parser.parse_args()
 
-if not options.user:
-    print "ERROR: Please specify user name.\n"
-    parser.print_help()
-    sys.exit(1)
-elif not options.password:
-    print "ERROR: Please specify a pasword\n"
-    parser.print_help()
-    sys.exit(1)
-
 sn = snnow.SportsnetNow()
 channels = sn.getChannels()
 guide = sn.getGuideData()
 abbr = None
 
-for channel in  channels:
-
-    if options.id:
-        if options.id == channel['id']:
-            abbr = channel['abbr']
-
-    prog = guide[str(channel['id'])]
-    print str(channel['id']) + ') ' + channel['name'] + ' (' + \
-          channel['abbr'] + ') - ' + str(prog)
-
-if abbr:
+if options.user != None and options.password != None:
     if not sn.authorize(options.user, options.password, options.mso):
         sys.exit(1)
     print "Authorization Complete."
+
+for channel in  channels:
+    if options.id:
+        if options.id == channel['neulion_id']:
+            abbr = channel['id']
+
+if abbr:
+    if AdobePass.getAuthnToken() == None:
+        print "Not logged in..."
+        sys.exit(1)
+
     stream = sn.getChannel(options.id, abbr, options.mso)
     if not stream:
         print "Unable to get stream"
@@ -53,14 +46,15 @@ if abbr:
 
     cookies = []
     streams = sn.parsePlaylist(stream, cookies)
-    print cookies
     bitrates = [int(x) for x in streams.keys()]
     
     stream = None
     for bitrate in reversed(sorted(bitrates)):
         if stream == None:
             stream = streams[str(bitrate)]
-    
+
+    print stream
+
     if not options.ffplay == None:
         fstream = ""
         fstream += ' -cookies "'
@@ -69,5 +63,9 @@ if abbr:
         
         fstream += '" "' + stream.split('|')[0] + '"' 
         command = "ffplay " + fstream
-        print command
         os.system(command)
+else:
+    for channel in  channels:
+        prog = guide[str(channel['neulion_id'])]
+        print str(channel['neulion_id']) + ') ' + channel['description'] + ' (' + \
+              channel['id'] + ') - ' + str(prog)
