@@ -1,3 +1,8 @@
+[B]Version 1.0.13[/B]
+
+- Fix cookies when requesting m3u8
+- Don't logon unless needed 
+
 [B]Version 1.0.12[/B]
 
 - Update for Krypton broken HLS
